svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: manulbfinal
  name: manulbfinal
  namespace: manu-ns
spec:
  ports:
  - name: 1234-80
    port: 1234
    protocol: TCP
    targetPort: 80
  selector:
    app: manu-cisco-app 
  type: ClusterIP
status:
  loadBalancer: {}
